# webzfs

./: .env.example  .gitignore  BUILD_AND_RUN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changelog.md  install_freebsd.sh  install_linux.sh  install_netbsd.sh  install_netbsd_deps.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_dev_freebsd.sh  setup_dev_linux.sh  tailwind.config.js  update_freebsd.sh  update_linux.sh  update_netbsd.sh  webzfs-install.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
add_feature_demo/: ADDING_NEW_FEATURES.md
add_feature_demo/views/: utils_ntp.py
auth/: token.py
blog/: 2026-07-08-0.75-BETA.md  2026-07-10-zpool-export-investigation-0.76.md  2026-07-13-per-dataset-io-monitoring-0.77.md  2026-07-13-per-dataset-io-monitoring.md
config/: gunicorn.conf.py  templates.py
dev-tools/: apply-diffs-v3.sh  apply-diffs.sh  download-open-pr-diffs.sh
ports/: README.md
services/: audit_logger.py  backup_restore.py  corner_style.py  dashboard.py  dataset_iostat.py  diagnostics.py  disk_utils.py  file.py  fleet_monitoring.py  health_analysis.py  pool_usage.py  sanoid.py  smart_monitoring.py  storage.py  support_bundle.py  syncoid.py  system_services.py  theme.py  timeout_settings.py  utils.py  zfs_dataset.py  zfs_observability.py  zfs_performance.py  zfs_pool.py  zfs_replication.py  zfs_snapshot.py
src/: styles.css
static/css/: corner_styles.css
static/js/: space_visualizer.js
templates/: base.jinja  illumos-omnios-compatibility-report.md  install_omnios.sh  layout.jinja  login.jinja
templates/dashboard/: arc_stats_data.jinja  cpu_time_data.jinja  index.jinja  memory_data.jinja  realtime_data.jinja  scrub_status_data.jinja  zfs_pools.jinja  (+5 more)
views/: __init__.py  dashboard.py  fleet.py  utils_files.py  utils_health.py  utils_logs.py  utils_scrub.py  utils_services.py  utils_settings.py  utils_smart.py  utils_ssh.py  utils_support_bundle.py  zfs_datasets.py  zfs_observability.py  zfs_performance.py  zfs_pools.py  zfs_replication.py  zfs_snapshots.py
(+90 files in other folders)
